<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/service_location"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_service_location_adrs"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="129297" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/Date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_dfd_date"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="12/12/12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" >

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/job_number"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_job_number"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="129297" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/trailer"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_trailer"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="12/12/12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" >

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enroute"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_enroute_time"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="129297" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/travel_distance"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_travel_distance"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="12/12/12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" >

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arrived"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_arrived_time"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="129297" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/travel_time"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_travel_time"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="12/12/12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" >

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/completed"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_completed_time"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="129297" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/on_site_time"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_on_site_time"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="12/12/12" />
    </LinearLayout>

</LinearLayout>