<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFA500" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/foreman_daily"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/foreman_sixth"
                android:textSize="20sp" />
        </RelativeLayout>

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/dialog_forman_details_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Accident_incident_notes"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_accident_report"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:layout_margin="15dp"
            android:gravity="top" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="60dp" >

            <Button
                android:id="@+id/btn_back_sixth"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:background="#FFFF00"
                android:text="@string/button_back" />

            <Button
                android:id="@+id/btn_next_sixth"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="#00FF00"
                android:text="@string/complete" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>