<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/job_number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_dfd_job_number"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="129297" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/Date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_dfd_date"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="12/12/12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/job_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_dfd_job_name"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="name" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/project_location"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_dfd_job_address"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="Address" />
    </LinearLayout>

</LinearLayout>